# Deferred-Shading-OpenGL

./: .gitignore  CMakeLists.txt  Data.hpp  Framebuffer.cpp  Framebuffer.h  Lightning.cpp  README.md  ShadersConf.cpp  ShadersConf.h  SingletonApp.cpp  SingletonApp.h  main.cpp
resources/: g_buffer_fragment_shader.fs  g_buffer_vertex_shader.vs  quad_fragment_shader.fs  quad_vertex_shader.vs
